# rlhf-trl

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICNESE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  train.py
configs/: accelerate.yml
scripts/: evaluate.py  train.py
src/rlhf_trl/: args.py  config.py  data.py  reward.py  train.py  trainer.py
