[tool.poetry]
name = "rlhf-trl"
version = "0.1.2"
description = "Reinforcement Learning from Human Feedback with TRL"

authors = ["Victor I. Afolabi <javafolabi@gmail.com>"]
maintainers = ["Victor I. Afolabi <javafolabi@gamil.com>"]

readme = "README.md"
repository = "https://github.com/victor-iyi/rlhf-trl"
keywords = [
  "reinforcement-learning",
  "human-feedback",
  "transformers",
  "accelerate",
  "pytorch",
]

classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

packages = [
  {include = "rlhf_trl", from = "src"},
]

[tool.poetry.dependencies]
python = "^3.10"

torch = "^2.0.1"
accelerate = "^0.20.3"
transformers = "^4.30.1"
trl = "^0.4.4"
jsonlines = "^3.1.0"
tqdm = "^4.65.0"
datasets = "^2.12.0"
peft = "^0.3.0"
wandb = "^0.15.4"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"
mypy = "^1.3.0"
pre-commit = "^3.3.2"
flake8 = "^6.0.0"
pydocstyle = {version = "^6.3.0", extras = ["tomli"]}
docformatter = {version = "^1.7.2", extras = ["tomli"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.autopep8]
recursive = true
# in-place = true
diff = true
aggressive = 3
max-line-length = 120

[tool.docformatter]
in-place = true
recursive = true
blank = true
close-quotes-on-newline = true

[tool.pydocstyle]
convention = "google"
add_ignore = [
  # Missing docstring in public module.
  "D100",
  # Missing docstring in public class.
  "D101",
  # Missing docstring in public package.
  "D104",
  # Missing docstring in magic method.
  "D105",
  # Missing docstring in __init__.
  "D107",
  # No blank lines allowed after function docstring.
  "D202",
  # 1 blank line required between summary line and description.
  "D205",
  # First line should end with a period, question mark, or exclamation point.
  "D415",
  # No blank lines allowed between a section header and its content.
  "D412",
  # Missing argument descriptions in the docstring.
  "D417",
]

[tool.mypy]
files = [
  "src/",
]
exclude = [
  "tests",
  ".venv",
  "venv",
]
namespace_packages = true
explicit_package_bases = true
strict = true
check_untyped_defs = true
ignore_missing_imports = true
disallow_any_generics = true
disallow_incomplete_defs = true
implicit_reexport = false
no_implicit_optional = true
show_error_codes = true
show_column_numbers = true
allow_untyped_calls = true
# show_error_content = true
warn_unused_configs = true
warn_unused_ignores = true
# warn_redundant_cast = true
warn_return_any = false
warn_unreachable = true
disallow_subclassing_any = false
disallow_untyped_decorators = false

[tool.pyright]
reportOptionalCall = "none"
reportGeneralTypeIssues = "none"
reportOptionalMemberAccess = "none"
reportUnboundVariable = "none"
